----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-04-16 Michal Cihar  <michal@cihar.com>
    * libraries/common.lib.php, libraries/export/sql.php: ANSI compatible
      exports (RFE #859815).

2004-04-15 Marc Delisle  <lem9@users.sourceforge.net>
    * ldi_table.php: allow longer field terminator (was 2 now 4);
      for example, to load a file where each line represents one field
      and the end of line is \r\n

2004-04-15 Michal Cihar  <michal@cihar.com>
    * tbl_properties_export.php, tbl_row_delete.php,
      libraries/display_tbl.lib.php: Support for exporting selected rows (RFE
      #927554) [still missing images/button_export.png, waiting for somebody
      to make it :-)].
    * libraries/auth/cookie.auth.lib.php: Fix possible undefined variable use.
    * libraries/display_tbl.lib.php: Convert charset for column fields (thanks
      to Marc for noticing this).

2004-04-15 Olivier Mueller <om@omnis.ch>
    * left.php: RFE #859208, Logout button in left frame

2004-04-14 Michal Cihar  <michal@cihar.com>
    * lang/czech: Updated.
    * tbl_select.php: Fixed undefined variable warning.
    * libraries/common.lib.php, libraries/display_tbl.lib.php,
      libraries/export/sql.php: Really support export of UPDATE queries (bug
      #914237), condition generation used from previous implementation in
      display_tbl.lib.php and moved to common.lib.php.
    * config.inc.php, export.php, lang/*, libraries/common.lib.php,
      libraries/config_import.lib.php, libraries/display_export.lib.php,
      libraries/export/*: Support for enclosing SQL export in transaction (RFE
      #930827).
    * libraries/export/csv.php: Do not strip export too much (bug #913988).
    * libraries/export/xml.php: Use PMA_DBI_fetch_row and drop PHP 3
      compatibility code.
    
2004-04-13 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/relation.lib.php: bug 930445 when PMA_table_info not defined,