@@ -8,6 +8,8 @@ $Source$
 2004-04-16 Michal Cihar  <michal@cihar.com>
     * libraries/common.lib.php, libraries/export/sql.php: ANSI compatible
       exports (RFE #859815).
+    * images/button_export.png: At least some export icon.
+    * libraries/display_tbl.lib.php: Fix image sizes.
 
 2004-04-15 Marc Delisle  <lem9@users.sourceforge.net>
     * ldi_table.php: allow longer field terminator (was 2 now 4);
@@ -17,8 +19,7 @@ $Source$
 2004-04-15 Michal Cihar  <michal@cihar.com>
     * tbl_properties_export.php, tbl_row_delete.php,
       libraries/display_tbl.lib.php: Support for exporting selected rows (RFE
-      #927554) [still missing images/button_export.png, waiting for somebody
-      to make it :-)].
+      #927554).
     * libraries/auth/cookie.auth.lib.php: Fix possible undefined variable use.
     * libraries/display_tbl.lib.php: Convert charset for column fields (thanks
       to Marc for noticing this).
